Cập nhật thêm danh mục cho mạng xã hội Twitter.

--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,7 @@ author:
   instagram: nguyen.duy.bang
   youtube: user/chip140494
   telephone: 0784140494
+  twitter: bangnguyenduy
 
 # Select which links to show in the footer
 footer-links-active:
