--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "img/My_Picture/avatar_github1.jpg"
+avatar: "img/My_Picture/avatar_github1.webp"
 
 # --- Footer options --- #
 
