--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,14 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "img/My_Picture/avatar_github1.webp"
+avatar: "img/My_Picture/avatar_github1.png"
 
 # --- Footer options --- #
 
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: 🔥Bằng Nguyễn Duy🔥
+  name: ❣️banghien❣️
   rss: true
   email: "duybang140494@gmail.com"
   facebook: drake.bangnguyen
@@ -42,10 +42,8 @@ author:
 footer-links-active:
   facebook: true
   email: true
-  github: true
   linkedin: true
   instagram: true
-  youtube: true
   telephone: true
 
 # Select which share links to show in posts
