--- a/.github/workflows/Lighthouse_CI.yml
+++ b/.github/workflows/Lighthouse_CI.yml
@@ -13,3 +13,5 @@ jobs:
           budgetPath: ./budget.json # test performance budgets
           uploadArtifacts: true # save results as an action artifacts
           temporaryPublicStorage: true # upload lighthouse report to the temporary storage
+      - name: run Lighthouse CI
+        run: lhci autorun
