--- a/.github/workflows/Lighthouse_CI.yml
+++ b/.github/workflows/Lighthouse_CI.yml
@@ -4,6 +4,10 @@ jobs:
   lighthouse:
     runs-on: ubuntu-latest
     steps:
+      - run: |
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo apt-get install -f -y
+          sudo apt install -y ./google-chrome-stable_current_amd64.deb
       - uses: actions/checkout@v2
       - name: Audit URLs using Lighthouse
         uses: treosh/lighthouse-ci-action@v7
