--- a/_config.yml
+++ b/_config.yml
@@ -14,18 +14,16 @@ description: Embedded Systems Engineer
 # List of links in the navigation bar
 navbar-links:
   📚Books: "books"
+  📌Topic:
+    - Lập trình vi điều khiển: Topic/lap-trinh-vi-dieu-khien
+    - Điện tử cơ bản: Topic/dien-dien-tu
+    - Ngoài luồng: Topic/ngoai-luong
   👨‍💻About Me: 
-    - 🧧Resume🧧: "resume/Nguyen-Duy-Bang-CV.pdf"
-    - About Me: aboutme
-    - Contact: Contact-info-NFC
+    - 🧧Resume🧧: resume/Nguyen-Duy-Bang-CV.pdf
+    - About Me: resume/aboutme
+    - Contact: resume/Contact-info-NFC
     - LinkedIn: "https://www.linkedin.com/in/bangnguyenduy"
     - Github: "https://github.com/bangnguyendev"
-  📌Projects:
-    - Smart Clock: "https://github.com/bangnguyendev/SmartClock"
-    - Sent Data ThingSpeak: "https://github.com/bangnguyendev/SentDataThingSpeak"  
-    - Vehicle Speed GPS: "https://github.com/bangnguyendev/VehicleSpeedGPS"    
-    - STM32 RTC RFID: "https://github.com/bangnguyendev/STMF1_RTCBackup_RFID"
-    - PWM Sine Wave Generator: "https://github.com/bangnguyendev/PWMSineWaveGenerator"
   🗝️Tags: tags #thay thế bằng nút tìm kiếm.
 
 # Image to show in the navigation bar - image must be a square (width = height)
