--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ description: Embedded Systems Engineer
 navbar-links:
   📚Books: "books"
   📌Topic:
-    - Lập trình vi điều khiển: Topic/lap-trinh-vi-dieu-khien
-    - Điện tử cơ bản: Topic/dien-dien-tu
-    - Ngoài luồng: Topic/ngoai-luong
+    - Programming MCU: Topic/lap-trinh-vi-dieu-khien
+    - Electronic components: Topic/dien-dien-tu
+    - Social sciences: Topic/ngoai-luong
   👨‍💻About Me: 
     - 🧧Resume🧧: resume/Nguyen-Duy-Bang-CV.pdf
     - About Me: resume/aboutme
@@ -43,7 +43,7 @@ author:
   linkedin: bangnguyenduy
   stackoverflow: "12104912"
   instagram: nguyen.duy.bang
-  youtube: user/chip140494
+  youtube: "@laptrinhthieunhi"
   telephone: 0784140494
   twitter: bangnguyenduy
 
