--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,10 @@ description: Embedded Systems Engineer
 navbar-links:
   📚Books: "books"
   📌Topic:
+    - Linux: Topic/linux
+    - Social sciences: Topic/ngoai-luong
     - Programming MCU: Topic/lap-trinh-vi-dieu-khien
     - Electronic components: Topic/dien-dien-tu
-    - Social sciences: Topic/ngoai-luong
   👨‍💻About Me: 
     - 🧧Resume🧧: resume/Nguyen-Duy-Bang-CV.pdf
     - About Me: resume/aboutme
@@ -35,7 +36,7 @@ avatar: "img/My_Picture/avatar_github1.webp"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: 🔥Bằng Nguyễn Duy🔥
+  name: 🔥Nguyễn Duy Bằng🔥
   rss: true
   email: "duybang140494@gmail.com"
   facebook: drake.bangnguyen
