--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ navbar-links:
   👨‍💻About Me: 
     - 🧧Resume🧧: resume/Nguyen-Duy-Bang-CV.pdf
     - About Me: resume/aboutme
-    - Contact: resume/Contact-info-NFC
+    - Contact: resume/Contact_Info_nfc
     - LinkedIn: "https://www.linkedin.com/in/bangnguyenduy"
     - Github: "https://github.com/bangnguyendev"
   🗝️Tags: tags #thay thế bằng nút tìm kiếm.
@@ -53,18 +53,18 @@ footer-links-active:
   rss: true
   facebook: true
   email: true
-  twitter: true
+  #twitter: true
   github: true
   linkedin: true
-  instagram: true
-  reddit: false
+  #instagram: true
+  #reddit: false
   stackoverflow: true
   youtube: true
   telephone: true
 
 # Select which share links to show in posts
 share-links-active:
-  twitter: true
+  #twitter: true
   facebook: true
   linkedin: true
 
