--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ navbar-links:
     - Electronic components: Topic/dien-dien-tu
   👨‍💻About Me: 
     - 🧧Resume🧧: resume/Nguyen-Duy-Bang-CV.pdf
-    - Bio Social: resume/bio-social
+    - Bio Social: bio-social
     - About Me: resume/aboutme
     - LinkedIn: "https://www.linkedin.com/in/bangnguyenduy"
     - Contact: resume/Contact_Info_nfc
