Updated Google Analytics 4

--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ share-links-active:
 disqus: "bang-nguyen-blog"
 
 # Fill in your Google Analytics ID to track your website using GA
-google_analytics: "UA-64524695-2"
+google_analytics: "G-NX3V2C477N"
 
 # Google Tag Manager ID
 gtm: "GTM-P4L6M63"
