--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ navbar-links:
     - Social sciences: Topic/Social sciences
     - Programming MCU: Topic/Programming MCU
     - Electronic components: Topic/Electronic components
+    - Load Firmware Tool: load-firmware
   👨‍💻About Me: 
     - 🧧Resume🧧: resume/Nguyen-Duy-Bang-CV.pdf
     - Bio Social: bio-social
