--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,15 @@ navbar-links:
     - Social sciences: Topic/Social sciences
     - Programming MCU: Topic/Programming MCU
     - Electronic components: Topic/Electronic components
-    - Load Firmware Tool: load-firmware
+  ⚙️Tools: 
+    - Esp Web Tools: load-firmware
   👨‍💻About Me: 
-    - 🧧Resume🧧: resume/Nguyen-Duy-Bang-CV.pdf
-    - Bio Social: bio-social
     - About Me: resume/aboutme
     - LinkedIn: "https://www.linkedin.com/in/bangnguyenduy"
-    - Contact: resume/Contact_Info_nfc
     - Github: "https://github.com/bangnguyendev"
+    - Bio Social: bio-social
+    - 🧧Resume🧧: resume/Nguyen-Duy-Bang-CV.pdf
+    
 
   🗝️Tags: tags #thay thế bằng nút tìm kiếm.
 
