Edited $(menus[i]).css('min-width', maxwidth + 'px')

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ navbar-links:
     - Electronic components: Topic/Electronic components
   ⚙️Tools: 
     - Esp Web Tools: load-firmware
-  👨‍💻About Me: 
+  🏋️About Me: 
     - About Me: resume/aboutme
     - LinkedIn: "https://www.linkedin.com/in/bangnguyenduy"
     - Github: "https://github.com/bangnguyendev"
