Updated post - CODE BIN ƯƠM MẦM LẬP TRÌNH NHÍ

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ navbar-links:
     - Programming MCU: Topic/Programming MCU
     - Electronic components: Topic/Electronic components
   ⚙️Tools: 
-    - Esp Web Tools: load-firmware
+    - Esp Web Tools: 2024-05-10-Flash-firmware
   🏋️About Me: 
     - About Me: resume/aboutme
     - LinkedIn: "https://www.linkedin.com/in/bangnguyenduy"
