Cập nhật site.url trong file _config.yml để chạy localhost và server github-page ok luôn!

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,9 @@ title: ✨Bằng Nguyễn✨
 
 # Short description of your site
 description: Embedded Systems Engineer
-
+site:
+  url: "/"
+  baseurl: "/" # Bỏ trống nếu bạn chạy ở root
 # --- Navigation bar options --- #
 # List of links in the navigation bar
 navbar-links:
